--- a/css/base.css
+++ b/css/base.css
@@ -1,7 +1,7 @@
 /* =================================================================== 
  *
- *  Glint v1.0 Base Stylesheet
- *  11-20-2017
+ *  EduFox v1.0 Base Stylesheet
+ * 
  *  ------------------------------------------------------------------
  *
  *  TOC:
