--- a/css/vendor.css
+++ b/css/vendor.css
@@ -1,7 +1,7 @@
 /* =================================================================== 
  *
- *  Glint v1.0 Vendor/Third Party CSS 
- *  11-20-2017
+ *  EduFox v1.0 Vendor/Third Party CSS 
+ *  
  *  ------------------------------------------------------------------
  *
  *  TOC:
